--- a/react-app/src/components/Listing/CreateListing.css
+++ b/react-app/src/components/Listing/CreateListing.css
@@ -132,7 +132,8 @@ textarea {
 .create-listing-button {
     margin-top: 30px;
     box-shadow: 2px 2px;
-    background-color: black;
+    /* background-color: black; */
+    background-color: red;
     border: none;
     color: white;
     /* margin-right: 0px; */
