--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -41,16 +41,18 @@ html, body {
 #menu-drop-down{
   background-color: white;
   z-index: 1;
-  height: 100%;
+  height: 50%;
   width: 200px;
   /* margin-left: 0px; */
   padding-right: 40px;
   /* display: grid; */
   list-style-type: none;
-  border: black 2px solid;
+  /* border: black 2px solid; */
   border-radius: 7px;
   /* position: relative; */
-  margin-top: 40px;
+  margin-top: 42px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7);
+  color: #2d2e2f;
 }
 #menu-drop-down li{
   padding-top: 20px;
@@ -62,9 +64,9 @@ text-decoration: none;
 
 #user-name-container{
   /* border: black 1px solid; */
-  color:white;
-  background-color: red;
-  margin-bottom: 20px;
+  color:#2d2e2f;
+  /* background-color: red; */
+
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -72,10 +74,10 @@ text-decoration: none;
   width: 150px;
   border-radius: 7px;
   margin-top: 20px;
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
 }
 .menu-button {
-  margin-top: 30px;
+  margin-top: 10px;
   box-shadow: 2px 2px;
   background-color: red;
   border: none;
@@ -114,4 +116,77 @@ margin-top: 40px;
   border: none;
   font-size: 37px;
   color: lightgrey;
+}
+
+
+#hello-container{
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  gap: 12px;
+  /* background-color: lightblue; */
+}
+
+#hello-container:hover{
+  border-color: rgba(235,235,235,1);
+}
+
+
+#create-container {
+display: flex;
+flex-direction: row;
+
+  text-align: center;
+    line-height: 50px;
+    text-decoration: none;
+    font-size: 14px;
+    font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+    font-weight: 600;
+    gap: 10px;
+}
+
+#create-container .menu-navLinks {
+  color: #000;
+  /* background-color: red; */
+}
+
+#create-container:hover {
+
+  border-color: rgba(235,235,235,1);
+  background-color: rgba(235,235,235,1);
+
+
+
+}
+#logout-container{
+  border-top: solid 1px rgba(235,235,235,1) ;
+  text-align: center;
+    line-height: 20px;
+    text-align: left;
+    display: flex;
+flex-direction: row;
+}
+
+#logout-container:hover{
+  border-color: rgba(235,235,235,1);
+  background-color: rgba(235,235,235,1);
+}
+
+#log-out-button{
+  border: none ;
+  background-color: inherit;
+  font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+
+}
+
+#log-out-button:hover{
+  border: none ;
+  /* background-color: rgba(235,235,235,1); */
+  background-color: inherit;
+}
+
+.menu-logo{
+  font-size: 20px;
 }
