--- a/react-app/src/components/Listing/all-listings.css
+++ b/react-app/src/components/Listing/all-listings.css
@@ -4,9 +4,9 @@ a,button {
 }
 .listing-details-container img {
 
-    width: 100%;
-    height: 120px;
-    border-radius: 10px 10px 10px 10px;
+    width: 200px;
+    height: 200px;
+    /* border-radius: 10px 10px 10px 10px; */
 }
 
 .listing-details-container{
@@ -16,24 +16,34 @@ a,button {
     display:flex;
     flex-wrap: wrap;
     gap: 20px;
-     justify-content: center;
+     /* justify-content: center; */
      padding: 0px;
      /* margin-left: 25%; */
 }
 
-.all-listings-container{
+.one-listings-container{
     display: flex;
-    flex-direction: column;
-    flex-basis: 20%;
-    /* border: 1px solid black; */
+    /* flex-direction: column; */
+    flex-basis: 50%;
+    border: 1px solid black;
     /* background-color: blueviolet; */
     /* justify-content: center; */
   /* align-items: center; */
-  border-radius: 10px 10px 10px 10px;
+  /* border-radius: 10px 10px 10px 10px; */
   cursor: pointer;
-
+  padding-top: 24px !important;
+    padding-right: 24px !important;
+    padding-bottom: 24px !important;
+    padding-left: 24px !important;
+    border-color: rgba(235,235,235,1);
+    transition: box-shadow 0.3s;
+    margin-left: 40px;
+    gap: 20px;
 }
 
+.one-listings-container:hover{
+  box-shadow: 3px 3px 5px #ccc;
+}
 /* #categories-bar-container {
 display: flex;
 flex-direction: row;
