--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -27,8 +27,9 @@ html, body {
   }
 
   #logo-image{
-    width: 200px;
-    height: 70px;
+    width: 150px;
+    height: 50px;
+    /* border: red 1px solid; */
 
     }
 .user-nav button{
@@ -42,7 +43,7 @@ html, body {
   background-color: white;
   z-index: 1;
   height: 50%;
-  width: 200px;
+  width: 170px;
   /* margin-left: 0px; */
   padding-right: 40px;
   /* display: grid; */
