--- a/react-app/src/components/Listing/CreateListing.css
+++ b/react-app/src/components/Listing/CreateListing.css
@@ -166,3 +166,34 @@ textarea {
     font-size: .75rem;
     margin-left: 10px;
 }
+
+
+.input-container {
+    position: relative;
+    width: 250px; /* Adjust the width as needed */
+  }
+
+  .input-container input[type="text"] {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
+  }
+
+  .input-container label {
+    position: absolute;
+    top: -12px;
+    left: 10px;
+    background-color: white;
+    padding: 0 5px;
+    font-size: 14px;
+    color: #777;
+  }
+
+  .input-container input[type="text"]:focus + label {
+    top: -25px;
+    font-size: 12px;
+    color: #333;
+    background-color: white;
+  }
