--- a/react-app/src/components/Listing/CreateListing.css
+++ b/react-app/src/components/Listing/CreateListing.css
@@ -133,14 +133,18 @@ textarea {
     margin-top: 30px;
     box-shadow: 2px 2px;
     /* background-color: black; */
-    background-color: red;
+    /* background-color: red; */
     border: none;
-    color: white;
+    /* color: white; */
+    background-color: rgba(224,7,7,1);
+    color: rgba(255,255,255,1);
     /* margin-right: 0px; */
     width: 250px;
-    border-radius: 7px;
-    height: 30px;
-    font-family: 'Wix Madefor Display', sans-serif;
+    border-radius: 4px;
+    height: 44px;
+    font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif !important;;
+    font-size: 16px !important;
+    font-weight: 500 !important;
 }
 
 .create-listing-button[disabled] {
@@ -167,10 +171,12 @@ textarea {
     margin-left: 10px;
 }
 
+/*  */
 
 .input-container {
     position: relative;
     width: 250px; /* Adjust the width as needed */
+    padding-bottom: 20px;
   }
 
   .input-container input[type="text"] {
@@ -179,8 +185,24 @@ textarea {
     border: 1px solid #ccc;
     border-radius: 4px;
     outline: none;
+
   }
 
+  .input-container input[type="text"]:focus {
+
+    border: 2px solid #2d2e2f;
+    box-shadow: inset 0 0 0 1px #c8c9ca;
+
+
+  }
+
+ .input-container input[type="text"]:hover {
+
+    border: 2px solid #2d2e2f;
+    box-shadow: inset 0 0 0 1px #c8c9ca;
+
+
+  }
   .input-container label {
     position: absolute;
     top: -12px;
@@ -189,11 +211,16 @@ textarea {
     padding: 0 5px;
     font-size: 14px;
     color: #777;
+
   }
 
-  .input-container input[type="text"]:focus + label {
+
+  /* .input-container input[type="text"]:focus + label {
     top: -25px;
     font-size: 12px;
     color: #333;
     background-color: white;
-  }
+    border: 1px solid #333;
+
+
+  } */
