reviews backend done

--- a/react-app/src/components/ListingTile/ListingTile.css
+++ b/react-app/src/components/ListingTile/ListingTile.css
@@ -1,7 +1,12 @@
 
 
-/* .all-listings-container{
-    display: flex;
-    background-color: lightblue;
-    flex-direction: row;
-} */
+.star_icon-1{
+    width: 1em;
+    height: 1em;
+    /* background-color: red; */
+    color: blue;
+    /* fill: blue; */
+}
+#review-rating-star{
+    color: gold;
+}
