--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -5,41 +5,46 @@
 .hidden {
   display: none;
 }
-html, body {
+
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
 }
-#main-menu-container{
+
+#main-menu-container {
   display: flex;
   justify-content: end;
 }
-#header{
+
+#header {
   display: flex;
   /* border-bottom: solid 2px lightgrey; */
   list-style-type: none;
   justify-content: space-between;
   align-items: center;
   margin-top: 0px;
-  padding-left: 20px ;
+  padding-left: 20px;
   padding-right: 20px;
   height: 70px;
-  }
+}
 
-  #logo-image{
-    width: 100px;
-    height: 40px;
-    /* border: red 1px solid; */
+#logo-image {
+  width: 100px;
+  height: 40px;
+  /* border: red 1px solid; */
 
-    }
-.user-nav button{
+}
+
+.user-nav button {
   background-color: blue;
   border: none;
   font-size: 23px;
   background-color: white;
 }
 
-#menu-drop-down{
+#menu-drop-down {
   background-color: white;
   z-index: 1;
   height: 290px;
@@ -56,17 +61,18 @@ html, body {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7);
   color: #2d2e2f;
 }
-#menu-drop-down li{
+
+#menu-drop-down li {
   padding-top: 20px;
   padding-bottom: 20px;
-text-decoration: none;
+  text-decoration: none;
 
 }
 
 
-#user-name-container{
+#user-name-container {
   /* border: black 1px solid; */
-  color:#2d2e2f;
+  color: #2d2e2f;
   /* background-color: red; */
 
   display: flex;
@@ -78,6 +84,7 @@ text-decoration: none;
   margin-top: 20px;
   /* margin-bottom: 50px; */
 }
+
 .menu-button {
   margin-top: 10px;
   box-shadow: 2px 2px;
@@ -91,16 +98,16 @@ text-decoration: none;
   font-family: 'Wix Madefor Display', sans-serif;
 }
 
-.menu-navLinks{
+.menu-navLinks {
   text-decoration: none;
 }
 
-.create-new-listing{
-margin-top: 40px;
+.create-new-listing {
+  margin-top: 40px;
 
 }
 
-#sign-in-container{
+#sign-in-container {
   /* background-color: red; */
   display: flex;
   flex-direction: column;
@@ -110,10 +117,11 @@ margin-top: 40px;
 
 }
 
-#sign-in-container button{
+#sign-in-container button {
   height: 40px;
 }
-.user-button-container{
+
+.user-button-container {
   background-color: white;
   border: none;
   font-size: 37px;
@@ -121,7 +129,7 @@ margin-top: 40px;
 }
 
 
-#hello-container{
+#hello-container {
   display: flex;
   align-items: center;
   /* justify-content: center; */
@@ -129,22 +137,22 @@ margin-top: 40px;
   /* background-color: lightblue; */
 }
 
-#hello-container:hover{
-  border-color: rgba(235,235,235,1);
+#hello-container:hover {
+  border-color: rgba(235, 235, 235, 1);
 }
 
 
 .create-container {
-display: flex;
-flex-direction: row;
+  display: flex;
+  flex-direction: row;
 
   text-align: center;
-    line-height: 50px;
-    text-decoration: none;
-    font-size: 14px;
-    font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-    font-weight: 600;
-    gap: 10px;
+  line-height: 50px;
+  text-decoration: none;
+  font-size: 14px;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 600;
+  gap: 10px;
 }
 
 .create-container .menu-navLinks {
@@ -154,41 +162,109 @@ flex-direction: row;
 
 .create-container:hover {
 
-  border-color: rgba(235,235,235,1);
-  background-color: rgba(235,235,235,1);
+  border-color: rgba(235, 235, 235, 1);
+  background-color: rgba(235, 235, 235, 1);
 
 
 
 }
-#logout-container{
-  border-top: solid 1px rgba(235,235,235,1) ;
+
+#logout-container {
+  border-top: solid 1px rgba(235, 235, 235, 1);
   text-align: center;
-    line-height: 20px;
-    text-align: left;
-    display: flex;
-flex-direction: row;
+  line-height: 20px;
+  text-align: left;
+  display: flex;
+  flex-direction: row;
 }
 
-#logout-container:hover{
-  border-color: rgba(235,235,235,1);
-  background-color: rgba(235,235,235,1);
+#logout-container:hover {
+  border-color: rgba(235, 235, 235, 1);
+  background-color: rgba(235, 235, 235, 1);
 }
 
-#log-out-button{
-  border: none ;
+#log-out-button {
+  border: none;
   background-color: inherit;
-  font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-    font-size: 14px;
-    font-weight: 600;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 600;
 
 }
 
-#log-out-button:hover{
-  border: none ;
+#log-out-button:hover {
+  border: none;
   /* background-color: rgba(235,235,235,1); */
   background-color: inherit;
 }
 
-.menu-logo{
+.menu-logo {
   font-size: 20px;
 }
+
+#main-sign-up-container {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  padding-inline-start: 00px;
+}
+
+/*  */
+/*  */
+.sign-up-container {
+  /* border-top: solid 1px rgba(235, 235, 235, 1); */
+  text-align: center;
+  /* line-height: 50px; */
+  /* height: 30px; */
+  /* text-align: left; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* border: 4px solid red; */
+
+  /* background-color: rgba(224,7,7,1); */
+    /* color: rgba(255,255,255,1); */
+    width: 150px;
+    border-radius: 4px;
+    height: 44px;
+    /* font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif !important;; */
+    font-size: 14px !important;
+    font-weight: 1000 !important;
+}
+
+
+.sign-up-container:hover {
+
+  border-color: rgba(235, 235, 235, 1);
+  background-color: rgba(235, 235, 235, 1);
+color: #000;
+
+
+}
+
+.sign-up-container button {
+  border: none;
+  background-color: inherit;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+
+  /* background-color: rgba(224,7,7,1); */
+    /* color: rgba(255,255,255,1); */
+    /* width: 250px; */
+    /* border-radius: 4px; */
+    /* height: 44px; */
+    font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif !important;;
+    font-size: 16px !important;
+    font-weight: 600 !important;
+
+}
+
+/* .log-out-container button:hover{
+    border: none ;
+    background-color: rgba(235,235,235,1);
+    background-color: inherit;
+
+  } */
