--- a/react-app/src/components/Listing/all-listings.css
+++ b/react-app/src/components/Listing/all-listings.css
@@ -16,20 +16,17 @@ a,button {
     display:flex;
     flex-wrap: wrap;
     gap: 20px;
-     /* justify-content: center; */
+
      padding: 0px;
-     /* margin-left: 25%; */
+
 }
 
 .one-listings-container{
     display: flex;
     /* flex-direction: column; */
-    flex-basis: 50%;
+    flex-basis: 40%;
     border: 1px solid black;
-    /* background-color: blueviolet; */
-    /* justify-content: center; */
-  /* align-items: center; */
-  /* border-radius: 10px 10px 10px 10px; */
+ 
   cursor: pointer;
   padding-top: 24px !important;
     padding-right: 24px !important;
@@ -63,7 +60,7 @@ cursor: pointer;
 } */
 
 
-.image-container {
+/* .image-container {
     position: relative;
     width: 60px;
   }
@@ -84,7 +81,7 @@ cursor: pointer;
 
   .image-container:hover::before {
     opacity: 1;
-  }
+  } */
 
   /* #cat-hr{
     width:95%;
