all categories and some css

--- a/react-app/src/components/Listing/all-listings.css
+++ b/react-app/src/components/Listing/all-listings.css
@@ -1,4 +1,6 @@
-
+body {
+  font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
 a,button {
     cursor: pointer;
 }
@@ -22,11 +24,14 @@ a,button {
 }
 
 .one-listings-container{
+  
+    font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: row ;
     flex-basis: 40%;
     border: 1px solid black;
- 
+
   cursor: pointer;
   padding-top: 24px !important;
     padding-right: 24px !important;
@@ -136,3 +141,18 @@ cursor: pointer;
   width: 80%;
   margin-left: 30px;
 } */
+#listing-heading{
+  font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif;
+    font-size: 28px;
+    font-weight: 700;
+    -webkit-letter-spacing: -0.4px;
+    -moz-letter-spacing: -0.4px;
+    -ms-letter-spacing: -0.4px;
+    letter-spacing: -0.4px;
+    line-height: 36px;
+    word-wrap: break-word !important;
+    word-break: break-word !important;
+    overflow-wrap: break-word !important;
+    color: rgba(45,46,47,1);
+    text-align: center;
+}
