--- a/react-app/src/components/ListingTile/ListingTile.css
+++ b/react-app/src/components/ListingTile/ListingTile.css
@@ -12,3 +12,34 @@ body {
 #review-rating-star{
     color: gold;
 }
+
+.category-style {
+
+    display: flex;
+    align-items: center;
+    gap: 5px;
+
+}
+.category-style p{
+    font-size: 12px;
+    /* color: gray; */
+    display: inline-block;
+    -webkit-text-decoration: none;
+    /* text-decoration: none; */
+    box-sizing: border-box;
+    color: rgba(110,112,114,1);
+    padding: 4px;
+    border-radius: 4px;
+    height: 25px;
+    white-space: nowrap;
+    background-color: rgba(240,240,240,1);
+    /* border: 0;
+    outline: none;
+    margin: 0px;
+    vertical-align: baseline;
+    cursor: pointer;
+    opacity: 1;
+    -webkit-transition: background-color 0.2s ease;
+    transition: background-color 0.2s ease; */
+
+}
