--- a/react-app/src/components/categories/categories.css
+++ b/react-app/src/components/categories/categories.css
@@ -58,7 +58,7 @@ border-radius: 4px;
     gap: 20px;
 
      padding: 0px;
-     /* width: 80%; */
+     width: 60%;
 
 }
 .category-details-container img {
