--- a/react-app/src/components/ManageListings/ManageListings.css
+++ b/react-app/src/components/ManageListings/ManageListings.css
@@ -30,7 +30,7 @@
   width: 200px;
   border-radius: 4px;
   height: 35px;
-  font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif !important;;
+  font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif !important;
   font-size: 12px !important;
   font-weight: 500 !important;
   margin-right: 10px ;
@@ -62,4 +62,28 @@ margin-bottom: 40px;
 .listing-details-container button:hover{
 
   background-color: rgba(184, 0, 0, 1);
+}
+
+.listing-details-container{
+  display: flex;
+  justify-content: center;
+  /* flex-basis: 40%; */
+  width: 1200px;
+}
+
+.listing-details-container >*{
+  width: 550px;
+
+}
+
+#main-manage-container{
+  display: flex;
+  justify-content: center;
+}
+
+.manage-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
