--- a/react-app/src/components/SignupFormModal/SignupForm.css
+++ b/react-app/src/components/SignupFormModal/SignupForm.css
@@ -1,6 +1,6 @@
 
 .signup-Modal{
-    height: 450px;
+    height: 500px;
     width: 300px;
     z-index: 2;
     font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif !important;;
@@ -54,4 +54,10 @@ select{
     /* background-color: blue; */
     height: 30px;
     font-size: .75rem;
+}
+
+#errors-container{
+    color: red;
+    font-size: 10px;
+
 }
