contact details added

--- a/react-app/src/components/LoginFormModal/LoginForm.css
+++ b/react-app/src/components/LoginFormModal/LoginForm.css
@@ -3,7 +3,7 @@
     height: 350px;
     width: 300px;
     z-index: 2;
-    font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif !important;;
+    font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif !important;
 }
 
 .login-Modal h1{
