--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -95,7 +95,7 @@ body {
   width: 150px;
   border-radius: 7px;
   height: 30px;
-  font-family: 'Wix Madefor Display', sans-serif;
+  font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 
 .menu-navLinks {
@@ -150,7 +150,7 @@ body {
   line-height: 50px;
   text-decoration: none;
   font-size: 14px;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif;
   font-weight: 600;
   gap: 10px;
 }
@@ -186,7 +186,7 @@ body {
 #log-out-button {
   border: none;
   background-color: inherit;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif;
   font-size: 14px;
   font-weight: 600;
 
@@ -222,15 +222,13 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  /* border: 4px solid red; */
 
-  /* background-color: rgba(224,7,7,1); */
-    /* color: rgba(255,255,255,1); */
+  /* color: rgba(224,7,7,1); */
     width: 150px;
     border-radius: 4px;
     height: 44px;
     /* font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif !important;; */
-    font-size: 14px !important;
+    font-size: 30px !important;
     font-weight: 1000 !important;
 }
 
@@ -247,7 +245,7 @@ color: #000;
 .sign-up-container button {
   border: none;
   background-color: inherit;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif;
   font-size: 14px;
   font-weight: 500;
 
@@ -268,3 +266,11 @@ color: #000;
     background-color: inherit;
 
   } */
+
+  #info-header{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: rgb(148, 148, 148);
+
+  }
