--- a/react-app/src/components/ListingDetails/ListingDetails.css
+++ b/react-app/src/components/ListingDetails/ListingDetails.css
@@ -69,3 +69,20 @@ body {
     /* background-color: lightblue; */
     margin-left: 50px;
  }
+
+ .create-menu-item-button{
+   border: none;
+  background-color: rgba(224,7,7,1);
+  color: rgba(255,255,255,1);
+  width: 200px;
+  border-radius: 4px;
+  height: 35px;
+  font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif !important;
+  font-size: 12px !important;
+  font-weight: 500 !important;
+  margin-right: 10px ;
+  transition: background-color 0.3s;
+margin-left: 30px;
+margin-bottom: 40px;
+margin-top: 30px;
+ }
