--- a/react-app/src/components/MenuItems/MenuItems.css
+++ b/react-app/src/components/MenuItems/MenuItems.css
@@ -4,6 +4,8 @@
     column-gap: 20px;
     row-gap: 10px;
     margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
 
   @media screen and (max-width: 599px) {
@@ -68,30 +70,35 @@
   }
 
   .item-button-container button{
-    margin-top: 30px;
-    box-shadow: 2px 2px;
-    background-color: black;
     border: none;
-    color: white;
-    /* margin-right: 0px; */
-    width: 250px;
-    border-radius: 7px;
-    height: 30px;
-    font-family: 'Wix Madefor Display', sans-serif;
-    margin-bottom: 20px;
+    background-color: rgba(224,7,7,1);
+    color: rgba(255,255,255,1);
+    width: 200px;
+    border-radius: 4px;
+    height: 35px;
+    font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif !important;
+    font-size: 12px !important;
+    font-weight: 500 !important;
+    margin-right: 10px ;
+    transition: background-color 0.3s;
+  margin-left: 30px;
+  margin-bottom: 40px;
+  margin-top: 30px;
   }
 
-  .description-container textarea{
+  .description-container2 textarea{
   resize: none;
   height: 100px;
+  width: 300px;
+  /* background-color: blue; */
   }
-  .images-container {
+  .images-container2 {
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
-    align-items: center;
+    /* align-items: center; */
   }
 
-  .images-container input{
+  .images-container2 input{
     width: 300px;
   }
