--- a/react-app/src/components/ManageReviews/ManageReviews.css
+++ b/react-app/src/components/ManageReviews/ManageReviews.css
@@ -2,7 +2,16 @@ body {
     font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+/* .all-reviews-container{
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: flex-start;
+} */
 
+#reviews-header{
+    text-align: center;
+}
 .review-container h4 {
 
     margin: 0px 5px 0px 0px;
